--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^2.4.0",
     "antd": "^5.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
+    "recharts": "^2.12.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
